# fastapi_supermarket

./: .coverage  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
fastapi_supermarket/: main.py
fastapi_supermarket/annotaded/: T_CurrentUser.py  T_OAuth2Form.py  T_Session.py
fastapi_supermarket/controllers/: auth_controller.py  category_controller.py  product_controller.py  sales_controller.py  users_controller.py
fastapi_supermarket/core/: database.py  security.py  settings.py
fastapi_supermarket/factory/: user_factory.py
fastapi_supermarket/models/: __init__.py
fastapi_supermarket/schemas/: category_schema.py  product_sales_schema.py  product_schema.py  sales_schema.py  user_schema.py
fastapi_supermarket/services/: auth_service.py  category_service.py  product_service.py  sales_service.py  user_service.py
migrations/: env.py
migrations/versions/: 6c4ee0126dbd_create_users_table.py  9bd279d643eb_create_users_table.py  c3d7bc3feccb_create_categories_products_sales_table.py
tests/: conftest.py
tests/controllers/: test_auth_controller.py  test_users_controller.py
tests/core/: test_security.py
tests/db/: test_user_db.py
